--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,7 +4,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/conferencedb
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=ttiweh28
+spring.datasource.password=*****
 spring.sql.init.platform=mysql
 
 # JPA/Hibernate Dialect for MySQL
